[gd_scene load_steps=5 format=3 uid="uid://dfknlwlwgdik8"]

[ext_resource type="Script" uid="uid://bs6rkav845ctd" path="res://scripts/UI/CharacterMenu.gd" id="1_uaokk"]
[ext_resource type="PackedScene" uid="uid://bsn0eltoysk2e" path="res://scenes/UI/CharacterSlot.tscn" id="2_d3o0x"]
[ext_resource type="Theme" uid="uid://dsbuojn3y8whe" path="res://resources/ui/fancy_theme.tres" id="3_evv6q"]

[sub_resource type="LabelSettings" id="LabelSettings_evv6q"]
font_size = 26
shadow_size = 9
shadow_color = Color(0.493087, 0.273171, 0.537419, 0.560784)
shadow_offset = Vector2(2, 1)

[node name="CharacterMenu" type="Control"]
process_mode = 2
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_uaokk")
character_slot_scene = ExtResource("2_d3o0x")

[node name="Margin" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = 124.0
offset_right = 85.0
offset_bottom = 186.0
grow_horizontal = 2
mouse_filter = 2

[node name="Title" type="Label" parent="Margin"]
layout_mode = 2
text = "CHOOSE ELEMENTALS BY CLICKING"
label_settings = SubResource("LabelSettings_evv6q")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("3_evv6q")

[node name="Spacer" type="Control" parent="Margin"]
layout_mode = 2

[node name="StartButton" type="TextureButton" parent="Margin"]
layout_mode = 2

[node name="MainMenuButton" type="TextureButton" parent="Margin"]
layout_mode = 2
